clean up handling of ForeignKey access from Table